k8s-security-framework/policies/metadata/KSP-META-001/tests/boundary-pass-additional-edge-case.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: meta-001-boundary-additional-boundary-pass
  namespace: policy-test
  labels:
    app: demo-api
spec:
  schedule: '*/5 * * * *'
  jobTemplate:
    spec:
      template:
        metadata:
          labels: null
        app: demo-api
        spec:
          restartPolicy: OnFailure
          containers:
          - name: demo-api
            image: harbor.example.com/demo-api:1.0.0
