k8s-security-framework/policies/metadata/KSP-META-001/tests/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: require-app-label-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: require-app-label
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name == 'ksp-meta-001-exception' && object.metadata.namespace
      == 'policy-test'
