k8s-security-framework/policies/metadata/KSP-META-001/tests/positive-statefulset-with-valid-label.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ksp-meta-001-positive-statefulset
  namespace: policy-test
  labels:
    app: "demo-api"
spec:
  selector:
    matchLabels:
      app: ksp-meta-001-positive-statefulset
  template:
    metadata:
      labels:
        app: ksp-meta-001-positive-statefulset
    spec:
      containers:
        - name: demo-api
          image: harbor.example.com/demo-api:1.0.0
